2004-11-30  Jonathan Pryor  <jonpryor@vt.edu>

	* mph.h: Use <glib.h>, not <glib/gtypes.h>, as the HP/UX compiler needs
	  <glib/gutils.h> to handle the `inline' keyword.

2004-11-27  Miguel de Icaza  <miguel@ximian.com>

	* Makefile.am (MPH_SOURCE): Add macros.c for compatibility with
	the old API (currently the old API would fail).

2004-11-25  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (MPH_SOURCE): Distribute old-map.h and map.h.

2004-11-18  Jonathan Pryor  <jonpryor@vt.edu>

	* stdio.c: Add fread(3) and fwrite(3) wrappers.

2004-11-16  Jonathan Pryor  <jonpryor@vt.edu>

	* Makefile.am: Remove sys-mount.c from the build.
	* sys-mount.c: Delete.  We're not exporting mount-related functionality
	  anymore.  It's not remotely portable, and trying to make it portable is a
	  doomed idea.
	* map.c: Remove mount- and umount-related conversion functions.

2004-11-14  Geoff Norton  <gnorton@customerdna.com>
	
	* mph.h:  Revernt jonp's removal of MPH_ON_BSD define as sys-mount.c
	and unistd.c still check this configuration value.  This allows mono
	to build on *BSD again.

2004-11-12  Jonathan Pryor <jonpryor@vt.edu>

	* dirent.c: Only access members which exist on the target
	  platform.
	* errno.c: Only export strerror_r if it's available.
	* mph.h: Remove MPH_ON_BSD; use the configure checks instead.
	* sys-mman.c: Only export posix_madvise if it's available.
	* unistd.c: Only export sethostid if it's available.

2004-11-08  Jonathan Pryor <jonpryor@vt.edu>

	* Makefile.am: Add sys-sendfile.c to the build.
	* dirent.c, fcntl.c, unistd.c: Remove
	  compile-time checks for -64 apis (pread64, etc.), as they're
	  superfluous.  GLibc #defines the functions to the appropriate
	  -64 counterpart when necessary, and Darwin is intrinsically
	  large-file-aware, so manual checking on my part is redundant and
	  unnecessary.
	* grp.c: Add checks for non-portable functions getgrnam_r,
	  getgrgid_r.
	* pwd.c: Add checks for non-portable functions getpwnam_r,